@@ -49,8 +49,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
         <argLine>-Xmx4g -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8</argLine>
     </properties>
 
@@ -115,8 +115,12 @@
                             <configuration>
                                 <source>${maven.compiler.source}</source>
                                 <target>${maven.compiler.target}</target>
-                                <compilerId>javac-with-errorprone</compilerId>
-                                <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                                <compilerArgument>-Xlint:deprecation</compilerArgument>
+                                <encoding>UTF-8</encoding>
+                                <compilerArgs>
+                                    <arg>--add-exports</arg><arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                                    <arg>--add-exports</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                </compilerArgs>
                             </configuration>
                             <dependencies>
                                 <dependency>
@@ -205,7 +209,7 @@
                     <autoReleaseAfterClose>false</autoReleaseAfterClose>
                 </configuration>
             </plugin>
-            
+
             <!-- Code coverage plugin, generates coverage report to target/site/jacoco/
                  To skip coverage generation add -Djacoco.skip=true -->
             <plugin>
@@ -278,9 +282,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <enableAssertions>true</enableAssertions>
+                        <argLine>
+                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens=java.base/java.nio=ALL-UNNAMED
+                        </argLine>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -294,7 +304,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
         </plugins>
 
         <pluginManagement>
